add booking extra feature added bearer authentication
